--- a/grafana-compose.yml
+++ b/grafana-compose.yml
@@ -1,11 +1,12 @@
 version: "3.8"
 
-grafana:
-  image: grafana/grafana:latest
-  container_name: grafana
-  ports:
-    - 3000:3000
-  environment:
-    GF_INSTALL_PLUGINS: grafana-clock-panel,briangann-gauge-panel,natel-plotly-panel,grafana-simple-json-datasource
-    GF_SECURITY_ADMIN_PASSWORD: grafanaHeadshot123
-    GF_USERS_ALLOW_SIGN_UP: false
+services
+  grafana:
+    image: grafana/grafana:latest
+    container_name: grafana
+    ports:
+      - 3000:3000
+    environment:
+      GF_INSTALL_PLUGINS: grafana-clock-panel,briangann-gauge-panel,natel-plotly-panel,grafana-simple-json-datasource
+      GF_SECURITY_ADMIN_PASSWORD: grafanaHeadshot123
+      GF_USERS_ALLOW_SIGN_UP: false
