--- a/grafana-compose.yml
+++ b/grafana-compose.yml
@@ -1,6 +1,6 @@
 version: "3.8"
 
-services
+services:
   grafana:
     image: grafana/grafana:latest
     container_name: grafana
@@ -9,4 +9,4 @@ services
     environment:
       GF_INSTALL_PLUGINS: grafana-clock-panel,briangann-gauge-panel,natel-plotly-panel,grafana-simple-json-datasource
       GF_SECURITY_ADMIN_PASSWORD: grafanaHeadshot123
-      GF_USERS_ALLOW_SIGN_UP: false
+      GF_USERS_ALLOW_SIGN_UP: "false"
