--- a/grafana-compose.yml
+++ b/grafana-compose.yml
@@ -1,12 +1,27 @@
 version: "3.8"
 
 services:
+  redis:
+    container_name: redismod
+    image: redislabs/redismod:latest
+    ports:
+      - 6379:6379
+
   grafana:
-    image: grafana/grafana:latest
     container_name: grafana
+    image: grafana/grafana:latest
     ports:
       - 3000:3000
     environment:
-      GF_INSTALL_PLUGINS: grafana-clock-panel,briangann-gauge-panel,natel-plotly-panel,grafana-simple-json-datasource
-      GF_SECURITY_ADMIN_PASSWORD: grafanaHeadshot123
-      GF_USERS_ALLOW_SIGN_UP: "false"
+      - GF_AUTH_ANONYMOUS_ORG_ROLE=Admin
+      - GF_AUTH_ANONYMOUS_ENABLED=true
+      - GF_USERS_ALLOW_SIGN_UP=false
+      - GF_AUTH_BASIC_ENABLED=false
+      - GF_ENABLE_GZIP=true
+      - GF_USERS_DEFAULT_THEME=light
+      - GF_INSTALL_PLUGINS=grafana-clock-panel,briangann-gauge-panel,natel-plotly-panel,grafana-simple-json-datasource,redis-app,redis-datasource
+      - GF_FEATURE_TOGGLES_ENABLE=ngalert
+      - GF_PLUGINS_PLUGIN_ADMIN_ENABLED=true
+    volumes:
+      - ./grafana/provisioning:/etc/grafana/provisioning
+      # - ./grafana/data:/var/lib/grafana # preserve Grafana configuration
